tests/algorithms/x/C/conversions/weight_conversion.c
// Generated by Mochi 0.10.32 on 2025-08-08 17:27 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>


static int contains_str(const char *arr[], size_t len, const char *val) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(arr[i], val) == 0) return 1;
    }
    return 0;
}

typedef struct { const char **keys; double *vals; size_t len; size_t cap; } MapSD;

static double map_get_sd(const char *keys[], const double vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* KILOGRAM_CHART_keys[27] = {"kilogram", "gram", "milligram", "metric-ton", "long-ton", "short-ton", "pound", "stone", "ounce", "carrat", "atomic-mass-unit"};
double KILOGRAM_CHART_vals[27] = {1, 1000, 1e+06, 0.001, 0.0009842073, 0.0011023122, 2.2046244202, 0.1574731728, 35.273990723, 5000, 6.022136652000001e+26};
size_t KILOGRAM_CHART_len = 11;
MapSD KILOGRAM_CHART = { KILOGRAM_CHART_keys, KILOGRAM_CHART_vals, 11, 27 };
static const char* WEIGHT_TYPE_CHART_keys[27] = {"kilogram", "gram", "milligram", "metric-ton", "long-ton", "short-ton", "pound", "stone", "ounce", "carrat", "atomic-mass-unit"};
double WEIGHT_TYPE_CHART_vals[27] = {1, 0.001, 1e-06, 1000, 1016.04608, 907.184, 0.453592, 6.35029, 0.0283495, 0.0002, 1.660540199e-27};
size_t WEIGHT_TYPE_CHART_len = 11;
MapSD WEIGHT_TYPE_CHART = { WEIGHT_TYPE_CHART_keys, WEIGHT_TYPE_CHART_vals, 11, 27 };

double user_pow10(long long exp);
double weight_conversion(const char* from_type, const char* to_type, double value);
int main(void);

double user_pow10(long long exp) {
    double result = 1.0;
    if (exp >= 0LL) {
        long long i = 0LL;
        while (i < exp) {
            result = result * 10.0;
            i = i + 1LL;
        }
    } else {
        long long i = 0LL;
        while (i < (0LL - exp)) {
            result = result / 10.0;
            i = i + 1LL;
        }
    }
    return result;
}

double weight_conversion(const char* from_type, const char* to_type, double value) {
    long long has_to = contains_str(KILOGRAM_CHART.keys, KILOGRAM_CHART.len, to_type);
    long long has_from = contains_str(WEIGHT_TYPE_CHART.keys, WEIGHT_TYPE_CHART.len, from_type);
    if (has_to && has_from) {
        return (value * map_get_sd(KILOGRAM_CHART.keys, KILOGRAM_CHART.vals, KILOGRAM_CHART.len, to_type)) * map_get_sd(WEIGHT_TYPE_CHART.keys, WEIGHT_TYPE_CHART.vals, WEIGHT_TYPE_CHART.len, from_type);
    }
    puts("Invalid 'from_type' or 'to_type'");
    return 0.0;
}

int main(void) {
    {
        long long __start = _now();
        printf("%g\n", weight_conversion("kilogram", "gram", 1.0));
        printf("%g\n", weight_conversion("gram", "pound", 3.0));
        printf("%g\n", weight_conversion("ounce", "kilogram", 3.0));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
